fixed login/register alignment

--- a/BetterAnimeList/wwwroot/css/styles.css
+++ b/BetterAnimeList/wwwroot/css/styles.css
@@ -406,10 +406,9 @@ Single styles
 	background-color: royalblue;
 	border-color: #222;
 	display: inline-block;
-	padding: .5em 1em;
 	margin-bottom: 0;
 	font-weight: 400;
-	line-height: 1.2;
+	width: 90%;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: middle;
@@ -417,6 +416,9 @@ Single styles
 	border: 1px solid transparent;
 	border-radius: .2em;
 	text-decoration: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-right: 5.5px;
 }
 
 .btn:hover
